# gtsam_standalone

./: .gitignore  CMakeLists.txt  README.md
cpp/: 1_SimpleRotation.cpp
custom_factors/: 1_fit_h_eq_y_minus_ax.cpp  1_fitline.cpp  2_fit_y_eq_ax_plus_b.cpp  3_fit_pose.cpp
expression_factors/: 1_exp2dslam.cpp  2_expfac_fitpos2.cpp  2_fitpos2.cpp  3_expfac_exponentiallinearfit.cpp  4_axxb.cpp  readme.md
jlblanco/: 1.cpp  2.cpp
